<resources>
    <string name="app_name">Flex</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">Firstname</string>
    <string name="last_name">Lastname</string>
    <string name="driver">Driver</string>
    <string name="rider">Rider</string>
    <string name="p2p">P 2 P</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="login_with">Login with social media</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="request_ride">REQUEST A RIDE</string>


    <!--DRIVER-->
    <string name="driver_licence_no">Driver\'s Licence No</string>
    <string name="exp_date">Exp. Date</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address"> Address</string>
    <string name="take_photo">Or Take A Photo</string>
    <string name="next">NEXT</string>
    <string name="take_photo_caps">TAKE A PHOTO</string>
    <string name="submit">SUBMIT</string>
    <string name="retake">RETAKE</string>
    <string name="done">DONE</string>
    <string name="ssn">Social Security No.</string>

    <!--PAYMENT-->
    <string name="your_ride">Your Ride</string>
    <string name="edit_payment">Edit Payment</string>
    <string name="pay_later_txt">Pay Later</string>
    <string name="pick_up">PICK UP</string>
    <string name="drop_off">DROP OFF</string>
    <string name="notes">NOTES</string>
    <string name="trip_fare">TRIP FARE</string>
    <string name="pay_now">PAY NOW</string>
    <string name="pay_later">PAY LATER</string>
    <string name="name">NAME</string>
    <string name="account">ACCOUNT</string>
    <string name="update_payment">UPDATE PAYMENT</string>
    <string name="activate">ACTIVATE</string>
    <string name="congratulation">Congratulations!</string>
    <string name="help_center">Help Center</string>
    <string name="search_terms">Enter you search terms</string>
    <string name="search">Search</string>
    <string name="chat_support">Instant Chat Support</string>
    <string name="file_report">File A Report</string>
    <string name="type_msg">Type a message...</string>

    <!--CREDIT CARD-->
    <string name="add_credit_card">Add a Credit card</string>
    <string name="credit_card_no">Credit Card number</string>
    <string name="name_on_card">Name On Card</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="cv_code">CV Code</string>
    <string name="add_card">ADD CARD</string>

    <!--PASSWORD-->
    <string name="change_pwd">Change Password</string>
    <string name="old_pwd">Old Password</string>
    <string name="new_pwd">New password</string>
    <string name="save_changes">SAVE CHANGES</string>

    <!--<string name="google_key">AIzaSyCE4KH1OBhtrpiIAGQmjea8XkhP6fqu0nU</string>-->
    <string name="google_key">AIzaSyCxJeILojsFNwLmjvrAw9w7b2aqhusj1n0</string>


    <string-array name="month">
        <item>MMM</item>
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>April</item>
        <item>May</item>
        <item>Jun</item>
        <item>July</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="year">
        <item>YYYY</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="facebook_app_id">1297518933738382</string>
    <string name="fb_login_protocol_scheme">fb1297518933738382</string>

</resources>
