<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:id="@+id/top_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/header_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_header" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_login_logo" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_rl"
        android:layout_marginTop="@dimen/_minus20sdp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_25sdp"
        android:paddingRight="@dimen/_25sdp"
        android:paddingTop="@dimen/_15sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proximanova_regular"
                android:text="@string/login"
                android:background="@drawable/dotted_line"
                android:textColor="@color/green"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:fontFamily="@font/proximanova_regular"
                android:text="@string/register"
                android:textColor="@color/blue"
                android:textSize="@dimen/_20sdp" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proximanova_regular"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingBottom="@dimen/_12sdp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/light_blue"
                android:textSize="@dimen/_14sdp"
                android:id="@+id/email_et"/>


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp">

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proximanova_regular"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/_12sdp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/light_blue"
                android:textSize="@dimen/_14sdp"
                />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp">

            <EditText
                android:id="@+id/confirm_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proximanova_regular"
                android:gravity="center_vertical"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingBottom="@dimen/_12sdp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/light_blue"
                android:textSize="@dimen/_14sdp" />


        </android.support.design.widget.TextInputLayout>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/driver_chk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/proximanova_regular"
                android:text="@string/driver"
                android:textColor="@color/light_blue"
                android:textSize="@dimen/_14sdp" />

            <RadioButton
                android:id="@+id/rider_chk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/proximanova_regular"
                android:text="@string/rider"
                android:textColor="@color/light_blue"
                android:textSize="@dimen/_14sdp" />


            <RadioButton
                android:id="@+id/p2p_chk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/proximanova_regular"
                android:text="@string/p2p"
                android:textColor="@color/light_blue"
                android:textSize="@dimen/_14sdp" />
        </RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:text="@string/sign_up"
                android:fontFamily="@font/proximanova_bold"
                android:layout_marginBottom="@dimen/_4sdp"
                android:textColor="#fff"
                android:textSize="@dimen/_14sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/login_btn" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>