<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bg_color"
    tools:context=".fragment.ChangePasswordFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/semibold"
        android:gravity="center"
        android:text="@string/change_pwd"
        android:textColor="@color/blue"
        android:textSize="@dimen/_18sdp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:src="@drawable/ic_user_placeholder"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        />

    <TextView
        android:id="@+id/user_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/semibold"
        android:gravity="center"
        android:text="John Deo"
        android:textColor="@color/blue"
        android:textSize="@dimen/_17sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/old_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            app:backgroundTint="@color/light_gray"
            android:hint="@string/old_pwd"
            android:fontFamily="@font/proximanova_regular"
            android:padding="@dimen/_15sdp"
            android:drawableLeft="@drawable/ic_lock_light"
            android:drawableRight="@drawable/ic_eye"
            android:drawablePadding="@dimen/_10sdp"
            android:singleLine="true"
            android:maxLines="1"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/new_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            app:backgroundTint="@color/light_gray"
            android:hint="@string/new_pwd"
            android:fontFamily="@font/proximanova_regular"
            android:padding="@dimen/_15sdp"
            android:drawableLeft="@drawable/ic_lock_dark"
            android:drawableRight="@drawable/ic_eye"
            android:drawablePadding="@dimen/_10sdp"
            android:singleLine="true"
            android:maxLines="1"
            android:inputType="textPassword"
            />

    </LinearLayout>


    <Button
        android:id="@+id/save_changes_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/login_btn"
        android:fontFamily="@font/proximanova_bold"
        android:text="@string/save_changes"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp" />
</LinearLayout>