<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context=".EditPaymentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_back"
            android:id="@+id/back_iv"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_payment"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:fontFamily="@font/proximanova_bold"
            android:paddingRight="@dimen/_20sdp"
            />

    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/_133sdp"
        android:layout_height="@dimen/_35sdp"
        android:src="@drawable/ic_paypal"
        android:scaleType="fitXY"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/light_gray"
            android:fontFamily="@font/proximanova_regular"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_10sdp"
           android:layout_marginRight="@dimen/_2sdp"
            android:layout_marginLeft="@dimen/_2sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_5sdp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:fontFamily="@font/proximanova_regular"
                android:textSize="@dimen/_14sdp"
                android:singleLine="true"
                android:maxLines="1"
                android:textColor="@color/light_gray"
                android:text="Tim Jones"/>

        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/light_gray"
            android:fontFamily="@font/proximanova_regular"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_2sdp"
            android:layout_marginLeft="@dimen/_2sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_5sdp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:fontFamily="@font/proximanova_regular"
                android:textSize="@dimen/_14sdp"
                android:singleLine="true"
                android:maxLines="1"
                android:textColor="@color/light_gray"
                android:text="timjones@gmail.com"/>

        </android.support.v7.widget.CardView>

    </LinearLayout>
    <Button
        android:id="@+id/update_payment_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/login_btn"
        android:fontFamily="@font/proximanova_bold"
        android:text="@string/update_payment"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp" />

</LinearLayout>